	  at once.

    * Fixed bug in administration command (reported by Daniel Poelzleithner)

    * Fix invalid assert in auto-away (reported by Daniel Poelzleithner)

	* Fix rejoining parted channels on restart (#78)

	* Fix erroneus toggling of "report-time" setting (#77)
	
	* Fix endless loop in logging system when debug level is 
	  set to 5 (reported by _static_).

  PORTABILITY
  
    * Added replacement functions for g_file_{set,get}_contents, for those 
      with GLib < 2.8
    
  DOCUMENTATION UPDATES

    * Updated command documentation

    * Updated requirements

  MINOR CHANGES

    * Fixed several compiler warnings

Ctrlproxy 3.0	2006-12-08

  This list is not complete. Several subsystems in ctrlproxy have been 
  rewritten.

  BUG FIXES

    * NetBSD portability fixes. (Adrian Portelli)

    * Properly support strict-rfc1459 comparisons.

	* No longer depend on specific order of USER and NICK commands.

	* Fixed 100% CPU usage bug.

	* Fix large number of memory leaks.

	* Fix crash bug in log_custom (Korbinian Rosenegger)

	* Support 'true' RFC1459 string comparison.

	* Respect CASEMAPPING sent by server.

	* Support different NICK sent by client in replication.

	* Make repl_* work when NICK sent by client differs from current NICK.

	* Support mIRC and ksirc.

	* Fix bug with setting PRIVATE too often.

	* Fix issue with NickServ IDENTIFY'ing when connecting to server.
	
	* Fix problems with incorrectly added colons.

  INTERNALS

	* Reduce number of files generated by configure.

	* Moved source control system to Bazaar (http://www.bazaar-vcs.org/)

	* Use separate include files rather than one large one.

	* Get rid of complicated filter class system.

	* Several modules have been integrated into the ControlProxy binary 
	  to avoid (engineering) overhead.

	* There now is a testsuite that tests some of the internal functions.

	* Add 'debug' module for easier debugging.

  NEW FEATURES

	* Removed dependency on popt and libxml.
